--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "xzcommoncss",
   "version": "1.0.0",
   "description": "通用css样式写法",
-  "main": "index.css",
+  "main": "static/Index.css",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
